--- a/queen-padme-tales/graphics/Makefile
+++ b/queen-padme-tales/graphics/Makefile
@@ -2,3 +2,6 @@ all: who-is-qoheleth.svg.png
 
 who-is-qoheleth.svg.png: who-is-qoheleth.svg
 	inkscape --export-width=300 --export-png="$@" $<
+
+evilphish-svg--facing-right.min.svg.png: evilphish-svg--facing-right.min.svg
+	inkscape -h 200 --export-filename evilphish-svg--facing-right.min.svg.png evilphish-svg--facing-right.min.svg
