--- a/queen-padme-tales/screenplay/Makefile
+++ b/queen-padme-tales/screenplay/Makefile
@@ -1,7 +1,7 @@
 NAME = Queen-Amidala-vs-the-Klingon-Warriors
 DOCS_BASE = $(NAME)
 
-SELINA_UPLOAD_TEMP_DEST = temp-so-who-the-hell-is-qoheleth
+SELINA_UPLOAD_TEMP_DEST = temp-queen-padme-tales
 
 include $(SCREENPLAY_COMMON_INC_DIR)/screenplays_common.mak
 
