--- a/queen-padme-tales/screenplay/Makefile
+++ b/queen-padme-tales/screenplay/Makefile
@@ -1,4 +1,5 @@
-NAME = Queen-Amidala-vs-the-Klingon-Warriors
+NAME = Planting-Trees Queen-Amidala-vs-the-Klingon-Warriors
+
 DOCS_BASE = $(NAME)
 
 SELINA_UPLOAD_TEMP_DEST = temp-queen-padme-tales
