add crying pinkie pie image
From https://www.deviantart.com/freefraq/art/Crying-Pinkie-279513784
by FreeFraQ - thanks!

--- a/queen-padme-tales/graphics/Makefile
+++ b/queen-padme-tales/graphics/Makefile
@@ -1,10 +1,4 @@
-all: Christina_Grimmie_in_November_2014--resized.webp who-is-qoheleth.svg.png
+all: crying_pinkie__by_freefraq_d4mey7s--resized.webp
 
-who-is-qoheleth.svg.png: who-is-qoheleth.svg
-	inkscape --export-width=300 --export-png="$@" $<
-
-evilphish-svg--facing-right.min.svg.png: evilphish-svg--facing-right.min.svg
-	inkscape -h 200 --export-filename evilphish-svg--facing-right.min.svg.png evilphish-svg--facing-right.min.svg
-
-Christina_Grimmie_in_November_2014--resized.webp: Christina_Grimmie_in_November_2014.jpg
+crying_pinkie__by_freefraq_d4mey7s--resized.webp: crying_pinkie__by_freefraq_d4mey7s.png
 	gm convert -resize 400x $< $@
