Update .gitignore: add generated files or remove old.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/queen-padme-tales/screenplay/Queen-Padme-Tales--Nighttime-Flight.screenplay-text.xhtml
+/queen-padme-tales/screenplay/Queen-Padme-Tales--Nighttime-Flight.screenplay-output.xhtml
 /queen-padme-tales/screenplay/Queen-Padme-Tales--Nighttime-Flight.screenplay-xml.xml
-/queen-padme-tales/screenplay/Queen-Padme-Tales--Planting-Trees.screenplay-text.xhtml
+/queen-padme-tales/screenplay/Queen-Padme-Tales--Planting-Trees.screenplay-output.xhtml
 /queen-padme-tales/screenplay/Queen-Padme-Tales--Planting-Trees.screenplay-xml.xml
-/queen-padme-tales/screenplay/Queen-Padme-Tales--Queen-Amidala-vs-the-Klingon-Warriors.screenplay-text.xhtml
+/queen-padme-tales/screenplay/Queen-Padme-Tales--Queen-Amidala-vs-the-Klingon-Warriors.screenplay-output.xhtml
 /queen-padme-tales/screenplay/Queen-Padme-Tales--Queen-Amidala-vs-the-Klingon-Warriors.screenplay-xml.xml
-/queen-padme-tales/screenplay/Queen-Padme-Tales--Take-It-Over.screenplay-text.xhtml
+/queen-padme-tales/screenplay/Queen-Padme-Tales--Take-It-Over.screenplay-output.xhtml
 /queen-padme-tales/screenplay/Queen-Padme-Tales--Take-It-Over.screenplay-xml.xml
-/queen-padme-tales/screenplay/Queen-Padme-Tales--The-Fifth-Sith.screenplay-text.xhtml
+/queen-padme-tales/screenplay/Queen-Padme-Tales--The-Fifth-Sith.screenplay-output.xhtml
 /queen-padme-tales/screenplay/Queen-Padme-Tales--The-Fifth-Sith.screenplay-xml.xml
